# dupfind

./: .clangd  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
.zed/: settings.json
cli/: main.cpp
include/dedup/actions/: executor.hpp  reporter.hpp
include/dedup/core/: detector.hpp  hasher.hpp  types.hpp
include/dedup/io/: filesystem.hpp
src/actions/: executor.cpp  reporter.cpp
src/core/: detector.cpp  hasher.cpp
src/io/: filesystem.cpp
tests/: CMakeLists.txt  test_hasher.cpp  test_main.cpp  test_placeholder.cpp  test_types.cpp
tests/utils/: test_fixtures.cpp  test_fixtures.hpp  test_main.cpp
